kotlinx-benchmark-core/kotlinx-benchmark-plugin/src/test/resources/templates/invalid-target/js-legacy/build.gradle
kotlin {
    js(LEGACY) {
        nodejs()
    }
}

benchmark {
    targets {
        register("js")
    }
}